mule-user-guide/v/3.6/anypoint-connectors.adoc
=  Anypoint连接器
:keywords: anypoint, components, elements, connectors

*Anypoint Connectors(TM)*有助于轻松地将您的Mule应用程序与第三方API和标准集成协议进行整合。使用应用程序流中的连接器使用协议或特定的API发送和接收数据。

Anypoint连接器自动与Anypoint Studio捆绑在一起，并且在https://www.anypoint.mulesoft.com/exchange/?type=connector[Anypoint Exchange]中有一个可供下载的大型附加连接器库。您还可以创建 link:/mule-user-guide/v/3.6/publishing-and-consuming-apis-with-mule[REST或SOAP API连接器]，或使用 link:/anypoint-connector-devkit/v/3.8[Anypoint连接器DevKit]创建自己的连接器。有关集成解决方案的更多信息，请参阅 http://www.mulesoft.com/platform/cloud-connectors[Anypoint连接器]产品网站。

您可以使用 link:/mule-user-guide/v/3.6/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中"test drive"连接器。

将其他连接器导入到Studio实例中，或者使用Studio外部的连接器创建应用程序，方法是将它们添加为Maven依赖项或将连接器库添加到项目中。

以下显示了Anypoint Platform中连接器与其他组件的关系：

image:AnypointConnectorGraphic.png[AnypointConnectorGraphic]

*Components*

*  link:/anypoint-connector-devkit/v/3.8[Anypoint连接器DevKit]
*  link:/mule-user-guide/v/3.6/web-service-consumer[Web服务使用者]
*  link:/mule-user-guide/v/3.6/http-connector[HTTP连接器]
*  https://www.anypoint.mulesoft.com/exchange/ [Anypoint Exchange]
*  link:/anypoint-data-gateway/[Anypoint数据网关]

== 连接器支持类别

连接器属于以下类别之一。有关更多信息，请参阅https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Connector支持策略]。

[%header,cols="2*a"]
|===
| {键入{1}}说明
| *Community*
|

MuleSoft或MuleSoft社区的成员编写和维护https://anypoint.mulesoft.com/exchange/?search=community[Community连接器]。由社区或MuleSoft构建的连接器通常是开源的，尽管每个软件包可能有所不同。合作伙伴构建的连接器可能不是开源的。直接联系合作伙伴以获取更多信息。您不需要任何特殊帐户或许可证即可使用社区连接器。

| *MuleSoft Certified*
|

https://anypoint.mulesoft.com/exchange/?search=mulesoft-certified[MuleSoft认证连接器]由MuleSoft的合作伙伴和开发人员社区开发，并由MuleSoft进行审查和认证。为获得支持，客户应联系创建MuleSoft认证连接器的MuleSoft合作伙伴。

| *Select*
|

MuleSoft维护着https://anypoint.mulesoft.com/exchange/?search=select[Select connectors]。包含在开源Mule发行版中的连接器可供所有人使用，但支持仅包含在Anypoint Platform订阅中。要使用所有其他选择连接器和访问支持，您必须具有活动的Anypoint Platform订阅。

| *Premium*
|

MuleSoft维护着https://anypoint.mulesoft.com/exchange/?search=premium[Premium连接器];您必须拥有有效的CloudHub Premium计划或企业订购，并具有您希望使用的特定连接器的权利。
|===

== 安装连接器

使用https://www.anypoint.mulesoft.com/exchange/?type=connector[Anypoint Exchange]安装连接器。有关更多信息，请参阅 link:/mule-user-guide/v/3.6/installing-connectors[从Anypoint Exchange安装连接器]。

== 连接器支持

有关详细信息，请参阅https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Connector支持策略]。

=== 获取对连接器的支持

如果您需要连接器方面的帮助，请搜索 http://forums.mulesoft.com[MuleSoft的论坛]获取解决方案和想法。

另请参阅https://support.mulesoft.com [MuleSoft支持]。

== 另请参阅

* 在https://www.anypoint.mulesoft.com/exchange/?type=connector[Anypoint Exchange]下载新连接器并阅读它们的特定文档。
* 了解如何使用 link:/anypoint-connector-devkit/v/3.8[Anypoint连接器DevKit]构建自己的连接器。
